# raspi-rover

./: .gitignore  README.md
body/: README.md
body/stl/: gia.stl  option_carrier.stl  option_carrier_joint.stl  option_earphone_jack_holder.stl  plateA.stl  plateB.stl  plateC.stl  sabo_holder.stl  tire.stl
circuit/: README.md
raspi_rover_esp32/: raspi_rover_esp32.ino
ros2_raspi_rover/: package.xml  setup.cfg  setup.py
ros2_raspi_rover/ros2_raspi_rover/: odom_to_joint_state.py  trapezoidal_control.py  twist_to_odom.py  twist_to_radsec_diff.py
ros2_raspi_rover_bringup/: robot.launch.py
ros2_raspi_rover_description/: CMakeLists.txt  README.md  package.xml
ros2_raspi_rover_description/config/: ekf.yaml  nav2_params.yaml
ros2_raspi_rover_description/launch/: display.launch.py  in_tb3.launch.py  js_gui_display.launch.py  rb_state_pub.launch.py
ros2_raspi_rover_description/maps/: sim_map.yaml
ros2_raspi_rover_description/rviz/: urdf_config.rviz
ros2_raspi_rover_description/src/description/: ros2_raspi_rover_description.urdf  ros2_raspi_rover_description.urdf.xacro  ros2_raspi_rover_description_raw.urdf
ros2_raspi_rover_description/world/: my_world.sdf
rps2_raspi_rover_description/src/description/: std_rover.urdf  std_rover.urdf.xacro
urdf/:  std_rover.urdf  std_rover.urdf.xacro
